RDCC-3485: added changes for court venue file